# yt-shortmaker

./: .gitignore  BLUEPRINT.xml  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  vm.sh
.github/: FUNDING.yml
.github/cross/: Dockerfile.aarch64-unknown-linux-gnu
.github/workflows/: release.yml  test.yml
docs/: PLANOS_EN.md  PLANOS_ES.md  PLANOS_RU.md  USAGE_EN.md  USAGE_ES.md  USAGE_RU.md  index.md
locales/: en.yml  es.yml  ru.yml
src/: compression.rs  config.rs  dashboard.rs  drive.rs  exporter.rs  facetracking.rs  gemini.rs  main.rs  security.rs  setup.rs  shorts.rs  tui.rs  types.rs  video.rs  whisper.rs
src/ai/: google.rs  mod.rs  openrouter.rs
wix/: main.wxs
